tests/templates/onpremises/00-disabled/baseline/manifests/auth/policies/acme-http-solver.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
---
